--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,5 +10,5 @@
 
 
 {% block content %}
-<H1>Welcome back {{ userid}} !!</H1> - <a href="{{ url_for('logout') }}">logout</a>
+<p>Welcome back {{ userid}} !! - <a href="{{ url_for('logout') }}">logout</a></p>
 {% endblock %}
